src/styles/master.scss
/* ... */
.statuses-container {
  display: flex;
  flex-grow: 1;
  flex-direction: column;
  overflow-y: scroll;
  -webkit-overflow-scrolling: touch;
  .statuses-container-nav {
    display: flex;
    padding: 10px;
    margin-bottom: 10px;
    li {
      cursor: pointer;
      margin-right: 20px;
      padding: 0 3px;
      padding-bottom: 5px;
      &.active {
        font-weight: 500;
        border-bottom: 2px solid #000;
      }
    }
  }
  .content {
    display: flex;
    flex-grow: 1;
    flex-direction: column;
    -ms-overflow-style: none;
    &::-webkit-scrollbar { width: 0 !important }
    .info {
      &.readonly {
        input {
          border-bottom: none;
        }
      }
      > div {
        display: flex;
        flex-direction: column;
        margin-bottom: 30px;
      }
      label, h4 {
        font-weight: 600;
        display: block;
      }
      input {
        background-color: transparent;
        padding-right: 0;
        padding-left: 0;
        &[readonly] {
          border-bottom: none;
        }
      }
    }
  }
}
// Zone, subzone, site, sensor status
.content .status, .search .status {
  display: flex;
  justify-content: space-between;
  flex-grow: 1;
  padding: 10px 15px;
  background-color: #fff;
  margin-bottom: 10px;
  box-shadow: 0px 0px 7px rgba(#000, 0.08);
  &:hover {
    box-shadow: 0px 0px 7px rgba(#000, 0.25);
  }
  span span {
    font-size: 0.8rem;
    color: $gray;
  }
  .status-text {
    display: flex;
    flex-direction: column;
    font-size: 0.8rem;
    .main {
      font-size: 1.2rem;
      font-weight: 600;
    }
  }
}
$dark: #1d212d;
#app {
  .overall {
    top: 0;
    margin-top: 30px;
    right: 0;
    left: auto;
    padding-top: 0;
    height: 100%;
    max-height: 700px;
    border-radius: 5px 0 0 5px;
    overflow: hidden;
    color: white;
    .content .status.list {
      background-color: $darker-gray;
    }
  }
  .leaflet-pane .tooltip .content {
    background-color: $dark-gray;
  }
  button, input {
    &.destructive {
      background-color: $connus-blue;
    }
    &.action {
      border: none;
      padding: 5px 20px;
      background-color: $connus-blue;
    }
  }
  .button.create {
    border-color: black;
  }
  .leaflet-control-zoom a {
    background-color: $dark-gray;
    color: white;
    border-color: black;
  }
  .leaflet-control-attribution {
    background-color: rgba(0, 0, 0, 0.7);
  }
  nav {
    background-color: #1d212d;
    transition: ease 0.8s;
  }
}






















/*
  NAVIGATOR
 */
.navigator {
  z-index: 1000;
  box-shadow: 0px 0px 10px rgba(#000, 0.3);
  flex-direction: column;
  -ms-overflow-style: none;
  &::-webkit-scrollbar { width: 0 !important }
  li a::before {
    background-repeat: no-repeat;
    background-image: url('/static/img/icons/sprite-sheet.svg');
    background-size: 250px 25px;
  }
  li.logout {
    margin-top: auto;
  }
  .navigator-header {
    display: flex;
    flex-direction: row;
  }
  .sites::before { background-position: -25px; }
  .accesses::before { background-position: -50px; }
  .vehicular-flow::before { background-position: -125px; }
  .perimeter::before { background-position: -75px; }
  .perimeter::before { background-position: -75px; }
  .cctv::before { background-position: -150px; }
  .facial-recognition::before { background-position: -100px; }

  .users::before { background-position: -175px; }
  .reports::before { background-position: -200px; }
  .logout::before { background-position: -225px; }
  h2 {
    font-weight: 600;
    color: $gray;
    margin-left: 30px;
    margin-bottom: 10px;
  }
}
/* ... */

